--- a/a.html
+++ b/a.html
@@ -1,26 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Terminal</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Terminal</title>
 </head>
 <body>
-  <!--fundo-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<div class="box">
+
+  
+  <div class="mdl">
+      <h1 class="title">
+      <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Space+Mono&pause=1000&color=FF5252&center=true&random=false&width=435&lines=Digite+'help'+para+ver+os+comandos" alt="Typing SVG" /></a>
+      </h1>
+    
+    <div class="cards">
+
+      <form>
+        <div class="logo">
+          <?xml version="1.0" encoding="UTF-8"?>
+          <svg width="48px" height="48px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlin">
+            <title>Group</title>
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Group" fill="#FFFFFF">
+              </g>
+            </g>
+          </svg>
+        </div>
+        
+        <div class="card">
+          <input id="card" placeholder="Digite..." type="text" required maxlength="19">
+          <span class="underline"></span>
+
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!--fundo-->
   <div>
     <div class="starsec"></div>
     <div class="starthird"></div>
     <div class="starfourth"></div>
     <div class="starfifth"></div>
   </div>
-  <!--fundo-->
-  <div class="container">
-  <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=FF5252&random=false&width=435&lines=Digite+'help'+para+ver+os+comandos" alt="type"/></a>
-   </div>
-   <div id="terminal">
-    <input type="text" id="command" placeholder="Digite...">
-  </div>
-  <script src="script.js"></script>
+<!--fundo-->
+<script src="main.js"></script>
 </body>
 </html>
