--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     <div class="starfifth"></div>
   </div>
 <!--fundo-->
-<script src="main.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
