--- a/index.html
+++ b/index.html
@@ -1,58 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Terminal</title>
+  <meta charset="UTF-8">
+  <title>Galeria de Fotos</title>
+  <link rel="stylesheet" href="galeria.css">
+
 </head>
 <body>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<div class="box">
-
   
-  <div class="mdl">
-      <h1 class="title">
-      <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Space+Mono&pause=1000&color=FF5252&center=true&random=false&width=435&lines=Digite+'help'+para+ver+os+comandos" alt="Typing SVG" /></a>
-      </h1>
-    
-    <div class="cards">
+  <audio autoplay loop>
+    <source src="glue song.mp3" type="audio/mp3">
+    Seu navegador não suporta o elemento de áudio.
+</audio>
+  
+<div class="Container">
 
-      <form>
-        <div class="logo">
-          <?xml version="1.0" encoding="UTF-8"?>
-          <svg width="48px" height="48px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlin">
-            <title>Group</title>
-            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-              <g id="Group" fill="#FFFFFF">
-              </g>
-            </g>
-          </svg>
-        </div>
-        
-        <div class="card">
-          <input id="card" placeholder="Digite..." type="text" required maxlength="19">
-          <span class="underline"></span>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto1.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
 
-        </div>
-      </form>
-    </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto2.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto3.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto4.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto5.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto6.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto7.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto8.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto9.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto10.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
+  </div>
+  <div class="Picture">
+    <img class="Picture-img" src="/img/foto11.jpg" alt="" />
+    <div class="Picture-note"><span></span></div>
   </div>
 </div>
-<!--fundo-->
-  <div>
-    <div class="starsec"></div>
-    <div class="starthird"></div>
-    <div class="starfourth"></div>
-    <div class="starfifth"></div>
-  </div>
-<!--fundo-->
-<script src="script.js"></script>
+
+<div class='made-with-love'>
+  Feito 
+   <span>♥</span>
+   Por
+   <a href='https://open.spotify.com/track/3iBgrkexCzVuPy4O9vx7Mf?si=Q2nQSnFRQ0-bl4bBigKANA' target='_blank'>Dev José/Beto</a>
+ 
+ </div>
+  <script  src="galeria.js"></script>
+
 </body>
 </html>
